<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.example</groupId>
  <artifactId>ExecutableLauncher</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>ExecutableLauncher</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
<junit.version>5.9.2</junit.version>  </properties>
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>be.0110.repo-releases</id>
            <name>0110.be repository</name>
            <url>https://mvn.0110.be/releases</url>
        </repository>
        <repository>
            <id>dcm4che repository</id>
            <url>https://www.dcm4che.org/maven2/</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.example.executablelauncher.Main</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running with: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>com.example.executablelauncher/com.example.executablelauncher.App</mainClass>
                            <launcher>app</launcher>
                            <jlinkZipName>app</jlinkZipName>
                            <jlinkImageName>app</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

  <dependencies>
      <dependency>
          <groupId>uk.co.caprica</groupId>
          <artifactId>vlcj</artifactId>
          <version>4.8.3</version>
      </dependency>

      <dependency>
          <groupId>uk.co.caprica</groupId>
          <artifactId>vlcj-javafx</artifactId>
          <version>1.2.0</version>
      </dependency>
      <dependency>
          <groupId>javafx.jni</groupId>
          <artifactId>javafx-jini</artifactId>
          <version>1.0.0</version>
          <scope>system</scope>
          <systemPath>${project.basedir}/lib/fx-jni-1.0.0.jar</systemPath>
      </dependency>
      <dependency>
          <groupId>io.github.palexdev</groupId>
          <artifactId>materialfx</artifactId>
          <version>11.17.0</version>
      </dependency>
      <dependency>
          <groupId>de.androidpit</groupId>
          <artifactId>color-thief</artifactId>
          <version>1.1.2</version>
      </dependency>
      <dependency>
          <groupId>com.github.kokorin.jaffree</groupId>
          <artifactId>jaffree</artifactId>
          <version>2023.09.10</version>
      </dependency>
      <dependency>
          <groupId>org.openpnp</groupId>
          <artifactId>opencv</artifactId>
          <version>4.9.0-0</version>
      </dependency>
      <dependency>
          <groupId>net.java.dev.jna</groupId>
          <artifactId>jna-platform</artifactId>
          <version>5.3.1</version>
      </dependency>
      <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-core</artifactId>
          <version>2.16.1</version>
      </dependency>
      <dependency>
          <groupId>com.google.http-client</groupId>
          <artifactId>google-http-client-jackson2</artifactId>
          <version>1.43.3</version>
      </dependency>
      <dependency>
          <groupId>com.google.api-client</groupId>
          <artifactId>google-api-client-gson</artifactId>
          <version>2.2.0</version>
      </dependency>
      <dependency>
          <groupId>com.google.apis</groupId>
          <artifactId>google-api-services-youtube</artifactId>
          <version>v3-rev20231011-2.0.0</version>
      </dependency>
      <dependency>
          <groupId>com.jfoenix</groupId>
          <artifactId>jfoenix</artifactId>
          <version>9.0.10</version>
      </dependency>
      <dependency>
          <groupId>be.tarsos.dsp</groupId>
          <artifactId>core</artifactId>
          <version>2.5</version>
      </dependency>
      <dependency>
          <groupId>be.tarsos.dsp</groupId>
          <artifactId>jvm</artifactId>
          <version>2.5</version>
      </dependency>
      <dependency>
          <groupId>org.imgscalr</groupId>
          <artifactId>imgscalr-lib</artifactId>
          <version>4.2</version>
      </dependency>
      <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-annotations</artifactId>
          <version>2.16.1</version>
      </dependency>
      <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
          <version>2.15.2</version>
      </dependency>
      <dependency>
          <groupId>com.squareup.okhttp3</groupId>
          <artifactId>okhttp</artifactId>
          <version>4.12.0</version>
      </dependency>
      <dependency>
          <groupId>uk.co.conoregan</groupId>
          <artifactId>themoviedbapi</artifactId>
          <version>1.15.1</version>
      </dependency>
      <dependency>
          <groupId>net.coobird</groupId>
          <artifactId>thumbnailator</artifactId>
          <version>0.4.17</version>
      </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>21.0.1</version>
    </dependency>
  <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-web</artifactId>
      <version>21.0.1</version>
  </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>21.0.1</version>
    </dependency>
      <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-graphics</artifactId>
          <version>21.0.1</version>
      </dependency>
      <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-swing</artifactId>
          <version>21.0.1</version>
      </dependency>
      <dependency>
          <groupId>com.google.code.gson</groupId>
          <artifactId>gson</artifactId>
          <version>2.11.0</version>
      </dependency>
      <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-media</artifactId>
          <version>21.0.2</version>
      </dependency>
      <dependency>
          <groupId>org.jsoup</groupId>
          <artifactId>jsoup</artifactId>
          <version>1.16.1</version>
      </dependency>
      <dependency>
          <groupId>commons-io</groupId>
          <artifactId>commons-io</artifactId>
          <version>2.11.0</version>
      </dependency>
      <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
          <version>2.0.9</version>
      </dependency>
      <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-simple</artifactId>
          <version>2.0.9</version>
          <scope>test</scope>
      </dependency>

      <dependency>
          <groupId>org.jcodec</groupId>
          <artifactId>jcodec-javase</artifactId>
          <version>0.2.5</version>
      </dependency>
      <dependency>
          <groupId>org.bytedeco</groupId>
          <artifactId>opencv</artifactId>
          <version>4.7.0-1.5.9</version>
      </dependency>
      <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-base</artifactId>
          <version>21-ea+24</version>
      </dependency>
      <dependency>
          <groupId>org.bytedeco</groupId>
          <artifactId>ffmpeg</artifactId>
          <version>6.0-1.5.9</version>
      </dependency>
  </dependencies>
</project>